// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transform-content returns the correct html from AsciiDoc for .adoc with a title and a link 1`] = `
<html lang="en"
      style="min-height:100vh;font-size:16px"
      data-reactroot
>
  <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <title>
      file-name.adoc
    </title>
    <style>
      /* http://meyerweb.com/eric/tools/css/reset/ 
v2.0 | 20110126
License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
 margin: 0;
 padding: 0;
 border: 0;
 font-size: 100%;
 font: inherit;
 vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
 display: block;
}
body {
 line-height: 1;
}
ol, ul {
 list-style: none;
}
blockquote, q {
 quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
 content: '';
 content: none;
}
table {
 border-collapse: collapse;
 border-spacing: 0;
}
sup {
  vertical-align: super;
  font-size: smaller;
  padding-right: 0.2rem;
}
    </style>
    <style>
      .content {
  padding: 20px 96px;
  line-height: 1.42857143;
  max-width: 960px;
  margin: 0 auto;
}

.content a {
  color: #337ab7;
  text-decoration: none;
}

.content h1 {
  font-size: 2.2rem;
  font-weight: 500;
  margin-top: 20px;
  margin-bottom: 10px;
}

.content h2 {
  font-size: 1.8rem;
  font-weight: 500;
  margin-top: 20px;
  margin-bottom: 10px;
}

.content h3 {
  font-size: 1.5rem;
  font-weight: 500;
  margin-top: 20px;
  margin-bottom: 10px;
}

.content ul {
  display: block;
  list-style-type: disc;
  margin-block-start: 1em;
  margin-block-end: 1em;
  padding-inline-start: 40px;
  margin-bottom: 10px;
}

.content ol {
  list-style-type: decimal;
  display: block;
  margin-block-start: 1em;
  margin-block-end: 1em;
  padding-inline-start: 40px;
}

.content p {
  margin-bottom: 10px;
}

.content img {
  display: block;
  max-width: 100%;
  height: auto;
  vertical-align: middle;
}

.content strong {
  font-weight: 700;
}

.content em {
  font-style: italic;
}

.content blockquote {
    padding: 10px 20px;
    margin: 0 0 20px;
    font-size: 17.5px;
    border-left: 5px solid #eee;
}

.content blockquote p:last-child {
    margin-bottom: 0;
}

.content hr {
  margin-top: 20px;
  margin-bottom: 20px;
  border: 0;
  border-top: 1px solid #949494;
}

.content pre {
  display: block;
  padding: 9.5px;
  margin: 0 0 10px;
  font-size: 13px;
  line-height: 1.42857143;
  color: #333;
  word-break: break-all;
  word-wrap: break-word;
  background-color: #f5f5f5;
  border: 1px solid #ccc;
  border-radius: 4px;
}

.content code {
  font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
}

.content pre code {
  padding: 0;
  font-size: inherit;
  color: inherit;
  white-space: pre-wrap;
  background-color: transparent;
  border-radius: 0;
}

.content p code {
  padding: 2px 4px;
    font-size: 90%;
    color: #c7254e;
    background-color: #f9f2f4;
    border-radius: 4px;
}

.content table {
  background-color: transparent;
  border-spacing: 0;
  border-collapse: collapse;
  width: 100%;
  max-width: 100%;
  margin-bottom: 20px;
}

.content th {
  text-align: left;
  vertical-align: bottom;
  border-bottom: 2px solid #ddd;
  font-weight: bold;
  font-size: 1.2rem;
  padding: 8px;
  line-height: 1.42857143;
}

.content td {
  padding: 8px;
  line-height: 1.42857143;
  vertical-align: top;
  border-top: 1px solid #ddd;
}
    </style>
  </head>
  <body style="min-height:100vh;font-family:&quot;Helvetica Neue&quot;,Helvetica,Arial,sans-serif;color:#333;background-color:#fff">
    <div style="min-height:75vh;padding-bottom:20px">
      <div style="border:none;border-radius:0;background-color:#000;margin-bottom:0;width:100%">
        <nav>
          <ol style="padding:1rem;list-style:none;display:flex;align-items:center">
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs"
              >
                morty-docs
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs/some-repo"
              >
                some-repo
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs/some-repo/file-name.adoc"
              >
                file-name.adoc
              </a>
            </li>
          </ol>
        </nav>
      </div>
      <div class="content">
        <div class="sect1">
          <h2 id="_title_of_simple_content_adoc">
            Title of simple-content.adoc
          </h2>
          <div class="sectionbody">
            <div class="paragraph">
              <p>
                <a href="docs/file-to-publish.md">
                  Link to MD in docs directory
                </a>
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <footer style="bottom:0;width:100%;background-color:#f5f5f5;box-sizing:border-box;min-height:25vh;position:relative;text-align:center;padding:1em 0 2em 0;line-height:1.5rem">
      <a href="https://github.com/bbc/morty-docs"
         style="color:#337ab7"
      >
        Morty-Docs on github
      </a>
      <br>
      Page generated on
      1
      <sup>
        st
      </sup>
      December
      2022
    </footer>
  </body>
</html>
`;

exports[`Transform-content returns the correct html from AsciiDoc for .asc with a title and a link 1`] = `
<html lang="en"
      style="min-height:100vh;font-size:16px"
      data-reactroot
>
  <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <title>
      file-name.asc
    </title>
    <style>
      /* http://meyerweb.com/eric/tools/css/reset/ 
v2.0 | 20110126
License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
 margin: 0;
 padding: 0;
 border: 0;
 font-size: 100%;
 font: inherit;
 vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
 display: block;
}
body {
 line-height: 1;
}
ol, ul {
 list-style: none;
}
blockquote, q {
 quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
 content: '';
 content: none;
}
table {
 border-collapse: collapse;
 border-spacing: 0;
}
sup {
  vertical-align: super;
  font-size: smaller;
  padding-right: 0.2rem;
}
    </style>
    <style>
      .content {
  padding: 20px 96px;
  line-height: 1.42857143;
  max-width: 960px;
  margin: 0 auto;
}

.content a {
  color: #337ab7;
  text-decoration: none;
}

.content h1 {
  font-size: 2.2rem;
  font-weight: 500;
  margin-top: 20px;
  margin-bottom: 10px;
}

.content h2 {
  font-size: 1.8rem;
  font-weight: 500;
  margin-top: 20px;
  margin-bottom: 10px;
}

.content h3 {
  font-size: 1.5rem;
  font-weight: 500;
  margin-top: 20px;
  margin-bottom: 10px;
}

.content ul {
  display: block;
  list-style-type: disc;
  margin-block-start: 1em;
  margin-block-end: 1em;
  padding-inline-start: 40px;
  margin-bottom: 10px;
}

.content ol {
  list-style-type: decimal;
  display: block;
  margin-block-start: 1em;
  margin-block-end: 1em;
  padding-inline-start: 40px;
}

.content p {
  margin-bottom: 10px;
}

.content img {
  display: block;
  max-width: 100%;
  height: auto;
  vertical-align: middle;
}

.content strong {
  font-weight: 700;
}

.content em {
  font-style: italic;
}

.content blockquote {
    padding: 10px 20px;
    margin: 0 0 20px;
    font-size: 17.5px;
    border-left: 5px solid #eee;
}

.content blockquote p:last-child {
    margin-bottom: 0;
}

.content hr {
  margin-top: 20px;
  margin-bottom: 20px;
  border: 0;
  border-top: 1px solid #949494;
}

.content pre {
  display: block;
  padding: 9.5px;
  margin: 0 0 10px;
  font-size: 13px;
  line-height: 1.42857143;
  color: #333;
  word-break: break-all;
  word-wrap: break-word;
  background-color: #f5f5f5;
  border: 1px solid #ccc;
  border-radius: 4px;
}

.content code {
  font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
}

.content pre code {
  padding: 0;
  font-size: inherit;
  color: inherit;
  white-space: pre-wrap;
  background-color: transparent;
  border-radius: 0;
}

.content p code {
  padding: 2px 4px;
    font-size: 90%;
    color: #c7254e;
    background-color: #f9f2f4;
    border-radius: 4px;
}

.content table {
  background-color: transparent;
  border-spacing: 0;
  border-collapse: collapse;
  width: 100%;
  max-width: 100%;
  margin-bottom: 20px;
}

.content th {
  text-align: left;
  vertical-align: bottom;
  border-bottom: 2px solid #ddd;
  font-weight: bold;
  font-size: 1.2rem;
  padding: 8px;
  line-height: 1.42857143;
}

.content td {
  padding: 8px;
  line-height: 1.42857143;
  vertical-align: top;
  border-top: 1px solid #ddd;
}
    </style>
  </head>
  <body style="min-height:100vh;font-family:&quot;Helvetica Neue&quot;,Helvetica,Arial,sans-serif;color:#333;background-color:#fff">
    <div style="min-height:75vh;padding-bottom:20px">
      <div style="border:none;border-radius:0;background-color:#000;margin-bottom:0;width:100%">
        <nav>
          <ol style="padding:1rem;list-style:none;display:flex;align-items:center">
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs"
              >
                morty-docs
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs/some-repo"
              >
                some-repo
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs/some-repo/file-name.asc"
              >
                file-name.asc
              </a>
            </li>
          </ol>
        </nav>
      </div>
      <div class="content">
        <div class="sect1">
          <h2 id="_title_of_simple_content_asc">
            Title of simple-content.asc
          </h2>
          <div class="sectionbody">
            <div class="paragraph">
              <p>
                <a href="docs/file-to-publish.md">
                  Link to MD in docs directory
                </a>
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <footer style="bottom:0;width:100%;background-color:#f5f5f5;box-sizing:border-box;min-height:25vh;position:relative;text-align:center;padding:1em 0 2em 0;line-height:1.5rem">
      <a href="https://github.com/bbc/morty-docs"
         style="color:#337ab7"
      >
        Morty-Docs on github
      </a>
      <br>
      Page generated on
      1
      <sup>
        st
      </sup>
      December
      2022
    </footer>
  </body>
</html>
`;

exports[`Transform-content returns the correct html from AsciiDoc for .asciidoc with a title and a link 1`] = `
<html lang="en"
      style="min-height:100vh;font-size:16px"
      data-reactroot
>
  <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <title>
      file-name.asciidoc
    </title>
    <style>
      /* http://meyerweb.com/eric/tools/css/reset/ 
v2.0 | 20110126
License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
 margin: 0;
 padding: 0;
 border: 0;
 font-size: 100%;
 font: inherit;
 vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
 display: block;
}
body {
 line-height: 1;
}
ol, ul {
 list-style: none;
}
blockquote, q {
 quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
 content: '';
 content: none;
}
table {
 border-collapse: collapse;
 border-spacing: 0;
}
sup {
  vertical-align: super;
  font-size: smaller;
  padding-right: 0.2rem;
}
    </style>
    <style>
      .content {
  padding: 20px 96px;
  line-height: 1.42857143;
  max-width: 960px;
  margin: 0 auto;
}

.content a {
  color: #337ab7;
  text-decoration: none;
}

.content h1 {
  font-size: 2.2rem;
  font-weight: 500;
  margin-top: 20px;
  margin-bottom: 10px;
}

.content h2 {
  font-size: 1.8rem;
  font-weight: 500;
  margin-top: 20px;
  margin-bottom: 10px;
}

.content h3 {
  font-size: 1.5rem;
  font-weight: 500;
  margin-top: 20px;
  margin-bottom: 10px;
}

.content ul {
  display: block;
  list-style-type: disc;
  margin-block-start: 1em;
  margin-block-end: 1em;
  padding-inline-start: 40px;
  margin-bottom: 10px;
}

.content ol {
  list-style-type: decimal;
  display: block;
  margin-block-start: 1em;
  margin-block-end: 1em;
  padding-inline-start: 40px;
}

.content p {
  margin-bottom: 10px;
}

.content img {
  display: block;
  max-width: 100%;
  height: auto;
  vertical-align: middle;
}

.content strong {
  font-weight: 700;
}

.content em {
  font-style: italic;
}

.content blockquote {
    padding: 10px 20px;
    margin: 0 0 20px;
    font-size: 17.5px;
    border-left: 5px solid #eee;
}

.content blockquote p:last-child {
    margin-bottom: 0;
}

.content hr {
  margin-top: 20px;
  margin-bottom: 20px;
  border: 0;
  border-top: 1px solid #949494;
}

.content pre {
  display: block;
  padding: 9.5px;
  margin: 0 0 10px;
  font-size: 13px;
  line-height: 1.42857143;
  color: #333;
  word-break: break-all;
  word-wrap: break-word;
  background-color: #f5f5f5;
  border: 1px solid #ccc;
  border-radius: 4px;
}

.content code {
  font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
}

.content pre code {
  padding: 0;
  font-size: inherit;
  color: inherit;
  white-space: pre-wrap;
  background-color: transparent;
  border-radius: 0;
}

.content p code {
  padding: 2px 4px;
    font-size: 90%;
    color: #c7254e;
    background-color: #f9f2f4;
    border-radius: 4px;
}

.content table {
  background-color: transparent;
  border-spacing: 0;
  border-collapse: collapse;
  width: 100%;
  max-width: 100%;
  margin-bottom: 20px;
}

.content th {
  text-align: left;
  vertical-align: bottom;
  border-bottom: 2px solid #ddd;
  font-weight: bold;
  font-size: 1.2rem;
  padding: 8px;
  line-height: 1.42857143;
}

.content td {
  padding: 8px;
  line-height: 1.42857143;
  vertical-align: top;
  border-top: 1px solid #ddd;
}
    </style>
  </head>
  <body style="min-height:100vh;font-family:&quot;Helvetica Neue&quot;,Helvetica,Arial,sans-serif;color:#333;background-color:#fff">
    <div style="min-height:75vh;padding-bottom:20px">
      <div style="border:none;border-radius:0;background-color:#000;margin-bottom:0;width:100%">
        <nav>
          <ol style="padding:1rem;list-style:none;display:flex;align-items:center">
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs"
              >
                morty-docs
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs/some-repo"
              >
                some-repo
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs/some-repo/file-name.asciidoc"
              >
                file-name.asciidoc
              </a>
            </li>
          </ol>
        </nav>
      </div>
      <div class="content">
        <div class="sect1">
          <h2 id="_title_of_simple_content_asciidoc">
            Title of simple-content.asciidoc
          </h2>
          <div class="sectionbody">
            <div class="paragraph">
              <p>
                <a href="docs/file-to-publish.md">
                  Link to MD in docs directory
                </a>
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <footer style="bottom:0;width:100%;background-color:#f5f5f5;box-sizing:border-box;min-height:25vh;position:relative;text-align:center;padding:1em 0 2em 0;line-height:1.5rem">
      <a href="https://github.com/bbc/morty-docs"
         style="color:#337ab7"
      >
        Morty-Docs on github
      </a>
      <br>
      Page generated on
      1
      <sup>
        st
      </sup>
      December
      2022
    </footer>
  </body>
</html>
`;

exports[`Transform-content returns the correct html from AsciiDoc for a line of plain text 1`] = `
<html lang="en"
      style="min-height:100vh;font-size:16px"
      data-reactroot
>
  <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <title>
      file-name.asciidoc
    </title>
    <style>
      /* http://meyerweb.com/eric/tools/css/reset/ 
v2.0 | 20110126
License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
 margin: 0;
 padding: 0;
 border: 0;
 font-size: 100%;
 font: inherit;
 vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
 display: block;
}
body {
 line-height: 1;
}
ol, ul {
 list-style: none;
}
blockquote, q {
 quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
 content: '';
 content: none;
}
table {
 border-collapse: collapse;
 border-spacing: 0;
}
sup {
  vertical-align: super;
  font-size: smaller;
  padding-right: 0.2rem;
}
    </style>
    <style>
      .content {
  padding: 20px 96px;
  line-height: 1.42857143;
  max-width: 960px;
  margin: 0 auto;
}

.content a {
  color: #337ab7;
  text-decoration: none;
}

.content h1 {
  font-size: 2.2rem;
  font-weight: 500;
  margin-top: 20px;
  margin-bottom: 10px;
}

.content h2 {
  font-size: 1.8rem;
  font-weight: 500;
  margin-top: 20px;
  margin-bottom: 10px;
}

.content h3 {
  font-size: 1.5rem;
  font-weight: 500;
  margin-top: 20px;
  margin-bottom: 10px;
}

.content ul {
  display: block;
  list-style-type: disc;
  margin-block-start: 1em;
  margin-block-end: 1em;
  padding-inline-start: 40px;
  margin-bottom: 10px;
}

.content ol {
  list-style-type: decimal;
  display: block;
  margin-block-start: 1em;
  margin-block-end: 1em;
  padding-inline-start: 40px;
}

.content p {
  margin-bottom: 10px;
}

.content img {
  display: block;
  max-width: 100%;
  height: auto;
  vertical-align: middle;
}

.content strong {
  font-weight: 700;
}

.content em {
  font-style: italic;
}

.content blockquote {
    padding: 10px 20px;
    margin: 0 0 20px;
    font-size: 17.5px;
    border-left: 5px solid #eee;
}

.content blockquote p:last-child {
    margin-bottom: 0;
}

.content hr {
  margin-top: 20px;
  margin-bottom: 20px;
  border: 0;
  border-top: 1px solid #949494;
}

.content pre {
  display: block;
  padding: 9.5px;
  margin: 0 0 10px;
  font-size: 13px;
  line-height: 1.42857143;
  color: #333;
  word-break: break-all;
  word-wrap: break-word;
  background-color: #f5f5f5;
  border: 1px solid #ccc;
  border-radius: 4px;
}

.content code {
  font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
}

.content pre code {
  padding: 0;
  font-size: inherit;
  color: inherit;
  white-space: pre-wrap;
  background-color: transparent;
  border-radius: 0;
}

.content p code {
  padding: 2px 4px;
    font-size: 90%;
    color: #c7254e;
    background-color: #f9f2f4;
    border-radius: 4px;
}

.content table {
  background-color: transparent;
  border-spacing: 0;
  border-collapse: collapse;
  width: 100%;
  max-width: 100%;
  margin-bottom: 20px;
}

.content th {
  text-align: left;
  vertical-align: bottom;
  border-bottom: 2px solid #ddd;
  font-weight: bold;
  font-size: 1.2rem;
  padding: 8px;
  line-height: 1.42857143;
}

.content td {
  padding: 8px;
  line-height: 1.42857143;
  vertical-align: top;
  border-top: 1px solid #ddd;
}
    </style>
  </head>
  <body style="min-height:100vh;font-family:&quot;Helvetica Neue&quot;,Helvetica,Arial,sans-serif;color:#333;background-color:#fff">
    <div style="min-height:75vh;padding-bottom:20px">
      <div style="border:none;border-radius:0;background-color:#000;margin-bottom:0;width:100%">
        <nav>
          <ol style="padding:1rem;list-style:none;display:flex;align-items:center">
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs"
              >
                morty-docs
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs/some-repo"
              >
                some-repo
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs/some-repo/file-name.asciidoc"
              >
                file-name.asciidoc
              </a>
            </li>
          </ol>
        </nav>
      </div>
      <div class="content">
        <div class="paragraph">
          <p>
            One line of plain text
          </p>
        </div>
      </div>
    </div>
    <footer style="bottom:0;width:100%;background-color:#f5f5f5;box-sizing:border-box;min-height:25vh;position:relative;text-align:center;padding:1em 0 2em 0;line-height:1.5rem">
      <a href="https://github.com/bbc/morty-docs"
         style="color:#337ab7"
      >
        Morty-Docs on github
      </a>
      <br>
      Page generated on
      1
      <sup>
        st
      </sup>
      December
      2022
    </footer>
  </body>
</html>
`;

exports[`Transform-content returns the correct html from markdown for Markdown with a title and links 1`] = `
<html lang="en"
      style="min-height:100vh;font-size:16px"
      data-reactroot
>
  <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <title>
      file-name.md
    </title>
    <style>
      /* http://meyerweb.com/eric/tools/css/reset/ 
v2.0 | 20110126
License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
 margin: 0;
 padding: 0;
 border: 0;
 font-size: 100%;
 font: inherit;
 vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
 display: block;
}
body {
 line-height: 1;
}
ol, ul {
 list-style: none;
}
blockquote, q {
 quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
 content: '';
 content: none;
}
table {
 border-collapse: collapse;
 border-spacing: 0;
}
sup {
  vertical-align: super;
  font-size: smaller;
  padding-right: 0.2rem;
}
    </style>
    <style>
      .content {
  padding: 20px 96px;
  line-height: 1.42857143;
  max-width: 960px;
  margin: 0 auto;
}

.content a {
  color: #337ab7;
  text-decoration: none;
}

.content h1 {
  font-size: 2.2rem;
  font-weight: 500;
  margin-top: 20px;
  margin-bottom: 10px;
}

.content h2 {
  font-size: 1.8rem;
  font-weight: 500;
  margin-top: 20px;
  margin-bottom: 10px;
}

.content h3 {
  font-size: 1.5rem;
  font-weight: 500;
  margin-top: 20px;
  margin-bottom: 10px;
}

.content ul {
  display: block;
  list-style-type: disc;
  margin-block-start: 1em;
  margin-block-end: 1em;
  padding-inline-start: 40px;
  margin-bottom: 10px;
}

.content ol {
  list-style-type: decimal;
  display: block;
  margin-block-start: 1em;
  margin-block-end: 1em;
  padding-inline-start: 40px;
}

.content p {
  margin-bottom: 10px;
}

.content img {
  display: block;
  max-width: 100%;
  height: auto;
  vertical-align: middle;
}

.content strong {
  font-weight: 700;
}

.content em {
  font-style: italic;
}

.content blockquote {
    padding: 10px 20px;
    margin: 0 0 20px;
    font-size: 17.5px;
    border-left: 5px solid #eee;
}

.content blockquote p:last-child {
    margin-bottom: 0;
}

.content hr {
  margin-top: 20px;
  margin-bottom: 20px;
  border: 0;
  border-top: 1px solid #949494;
}

.content pre {
  display: block;
  padding: 9.5px;
  margin: 0 0 10px;
  font-size: 13px;
  line-height: 1.42857143;
  color: #333;
  word-break: break-all;
  word-wrap: break-word;
  background-color: #f5f5f5;
  border: 1px solid #ccc;
  border-radius: 4px;
}

.content code {
  font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
}

.content pre code {
  padding: 0;
  font-size: inherit;
  color: inherit;
  white-space: pre-wrap;
  background-color: transparent;
  border-radius: 0;
}

.content p code {
  padding: 2px 4px;
    font-size: 90%;
    color: #c7254e;
    background-color: #f9f2f4;
    border-radius: 4px;
}

.content table {
  background-color: transparent;
  border-spacing: 0;
  border-collapse: collapse;
  width: 100%;
  max-width: 100%;
  margin-bottom: 20px;
}

.content th {
  text-align: left;
  vertical-align: bottom;
  border-bottom: 2px solid #ddd;
  font-weight: bold;
  font-size: 1.2rem;
  padding: 8px;
  line-height: 1.42857143;
}

.content td {
  padding: 8px;
  line-height: 1.42857143;
  vertical-align: top;
  border-top: 1px solid #ddd;
}
    </style>
  </head>
  <body style="min-height:100vh;font-family:&quot;Helvetica Neue&quot;,Helvetica,Arial,sans-serif;color:#333;background-color:#fff">
    <div style="min-height:75vh;padding-bottom:20px">
      <div style="border:none;border-radius:0;background-color:#000;margin-bottom:0;width:100%">
        <nav>
          <ol style="padding:1rem;list-style:none;display:flex;align-items:center">
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs"
              >
                morty-docs
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs/some-repo"
              >
                some-repo
              </a>
            </li>
          </ol>
        </nav>
      </div>
      <div class="content">
        <h1 id="title-of-simple-contentmd">
          <a href="#title-of-simple-contentmd">
            Title of simple-content.md
          </a>
        </h1>
        <p>
          <a href="docs/file-to-publish.html">
            Relative link to MD in docs directory
          </a>
          <br>
          <a href="/morty-docs/some-repo/docs/file-to-publish.html">
            Root link to MD in docs directory
          </a>
        </p>
      </div>
    </div>
    <footer style="bottom:0;width:100%;background-color:#f5f5f5;box-sizing:border-box;min-height:25vh;position:relative;text-align:center;padding:1em 0 2em 0;line-height:1.5rem">
      <a href="https://github.com/bbc/morty-docs"
         style="color:#337ab7"
      >
        Morty-Docs on github
      </a>
      <br>
      Page generated on
      1
      <sup>
        st
      </sup>
      December
      2022
    </footer>
  </body>
</html>
`;

exports[`Transform-content returns the correct html from markdown for a line of plain text 1`] = `
<html lang="en"
      style="min-height:100vh;font-size:16px"
      data-reactroot
>
  <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <title>
      file-name.md
    </title>
    <style>
      /* http://meyerweb.com/eric/tools/css/reset/ 
v2.0 | 20110126
License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
 margin: 0;
 padding: 0;
 border: 0;
 font-size: 100%;
 font: inherit;
 vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
 display: block;
}
body {
 line-height: 1;
}
ol, ul {
 list-style: none;
}
blockquote, q {
 quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
 content: '';
 content: none;
}
table {
 border-collapse: collapse;
 border-spacing: 0;
}
sup {
  vertical-align: super;
  font-size: smaller;
  padding-right: 0.2rem;
}
    </style>
    <style>
      .content {
  padding: 20px 96px;
  line-height: 1.42857143;
  max-width: 960px;
  margin: 0 auto;
}

.content a {
  color: #337ab7;
  text-decoration: none;
}

.content h1 {
  font-size: 2.2rem;
  font-weight: 500;
  margin-top: 20px;
  margin-bottom: 10px;
}

.content h2 {
  font-size: 1.8rem;
  font-weight: 500;
  margin-top: 20px;
  margin-bottom: 10px;
}

.content h3 {
  font-size: 1.5rem;
  font-weight: 500;
  margin-top: 20px;
  margin-bottom: 10px;
}

.content ul {
  display: block;
  list-style-type: disc;
  margin-block-start: 1em;
  margin-block-end: 1em;
  padding-inline-start: 40px;
  margin-bottom: 10px;
}

.content ol {
  list-style-type: decimal;
  display: block;
  margin-block-start: 1em;
  margin-block-end: 1em;
  padding-inline-start: 40px;
}

.content p {
  margin-bottom: 10px;
}

.content img {
  display: block;
  max-width: 100%;
  height: auto;
  vertical-align: middle;
}

.content strong {
  font-weight: 700;
}

.content em {
  font-style: italic;
}

.content blockquote {
    padding: 10px 20px;
    margin: 0 0 20px;
    font-size: 17.5px;
    border-left: 5px solid #eee;
}

.content blockquote p:last-child {
    margin-bottom: 0;
}

.content hr {
  margin-top: 20px;
  margin-bottom: 20px;
  border: 0;
  border-top: 1px solid #949494;
}

.content pre {
  display: block;
  padding: 9.5px;
  margin: 0 0 10px;
  font-size: 13px;
  line-height: 1.42857143;
  color: #333;
  word-break: break-all;
  word-wrap: break-word;
  background-color: #f5f5f5;
  border: 1px solid #ccc;
  border-radius: 4px;
}

.content code {
  font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
}

.content pre code {
  padding: 0;
  font-size: inherit;
  color: inherit;
  white-space: pre-wrap;
  background-color: transparent;
  border-radius: 0;
}

.content p code {
  padding: 2px 4px;
    font-size: 90%;
    color: #c7254e;
    background-color: #f9f2f4;
    border-radius: 4px;
}

.content table {
  background-color: transparent;
  border-spacing: 0;
  border-collapse: collapse;
  width: 100%;
  max-width: 100%;
  margin-bottom: 20px;
}

.content th {
  text-align: left;
  vertical-align: bottom;
  border-bottom: 2px solid #ddd;
  font-weight: bold;
  font-size: 1.2rem;
  padding: 8px;
  line-height: 1.42857143;
}

.content td {
  padding: 8px;
  line-height: 1.42857143;
  vertical-align: top;
  border-top: 1px solid #ddd;
}
    </style>
  </head>
  <body style="min-height:100vh;font-family:&quot;Helvetica Neue&quot;,Helvetica,Arial,sans-serif;color:#333;background-color:#fff">
    <div style="min-height:75vh;padding-bottom:20px">
      <div style="border:none;border-radius:0;background-color:#000;margin-bottom:0;width:100%">
        <nav>
          <ol style="padding:1rem;list-style:none;display:flex;align-items:center">
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs"
              >
                morty-docs
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs/some-repo"
              >
                some-repo
              </a>
            </li>
          </ol>
        </nav>
      </div>
      <div class="content">
        <p>
          One line of plain text
        </p>
      </div>
    </div>
    <footer style="bottom:0;width:100%;background-color:#f5f5f5;box-sizing:border-box;min-height:25vh;position:relative;text-align:center;padding:1em 0 2em 0;line-height:1.5rem">
      <a href="https://github.com/bbc/morty-docs"
         style="color:#337ab7"
      >
        Morty-Docs on github
      </a>
      <br>
      Page generated on
      1
      <sup>
        st
      </sup>
      December
      2022
    </footer>
  </body>
</html>
`;
